--- a/index.html
+++ b/index.html
@@ -91,34 +91,34 @@
 							<p>Here you'll find all of our creations avaiable to download for free.</p>
 							<div class="features">
 								<section>
-									<span class="icon major fa-code"></span>
+									<span class="icon major fa-circle"></span>
 									<h3>EGG RPG</h3>
 									<p>EGG is a post-apocalyptic sci-fi Role-Playing Game that focuses on light, easy to pick up rules and a very open approach to mechanics, allowing players to quickly become immersed in the lore and begin playing.</p>
 								</section>
 								<section>
-									<span class="icon major fa-lock"></span>
+									<span class="icon major fa-car"></span>
 									<h3>Road Locator</h3>
 									<p>Road Locator is a cooperative board game about a bunch of aliens who go on a country-wide road trip to try and get back home.</p>
 								</section>
 								<section>
-									<span class="icon major fa-cog"></span>
+									<span class="icon major fa-copyright"></span>
 									<h3>SARPG</h3>
-									<p>SARPG is a Role-Playing Game based on the Nickelodeon series, Avatar: The Last Airbender..</p>
+									<p>SARPG is a Role-Playing Game based on the Nickelodeon series, Avatar: The Last Airbender.</p>
 								</section>
 								<section>
-									<span class="icon major fa-desktop"></span>
-									<h3>Veroeros quis lorem</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon major fa-globe"></span>
+									<h3>john country</h3>
+									<p>COMING SOON</p>
 								</section>
 								<section>
-									<span class="icon major fa-chain"></span>
-									<h3>Urna quis bibendum</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon major fa-lock"></span>
+									<h3>TBD</h3>
+									<p>who knows if we'll even make something to put here</p>
 								</section>
 								<section>
-									<span class="icon major fa-diamond"></span>
-									<h3>Aliquam urna dapibus</h3>
-									<p>Phasellus convallis elit id ullam corper amet et pulvinar. Duis aliquam turpis mauris, sed ultricies erat dapibus.</p>
+									<span class="icon major fa-lock"></span>
+									<h3>TBD</h3>
+									<p>who knows if we'll even make something to put here</p>
 								</section>
 							</div>
 							<ul class="actions">
@@ -130,8 +130,8 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							<h2>Handy Links</h2>
+							<p>.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
@@ -172,10 +172,10 @@
 											<h3>Social</h3>
 											<ul class="icons">
 												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="fa-facebook"><span class="label">Facebook</span></a></li>
+												<li><a href="#" class="fa-reddit"><span class="label">reddit</span></a></li>
 												<li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="fa-linkedin"><span class="label">LinkedIn</span></a></li>
+												<li><a href="#" class="fa-youtube-play"><span class="label">YouTube</span></a></li>
 											</ul>
 										</li>
 									</ul>
@@ -190,7 +190,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; A Frog and a Cat Productions. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
