--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<h1>A Frog and a Cat Productions</h1>
 							<p>Game design extraordinaires.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a href="#one" class="button scrolly">About us</a></li>
 							</ul>
 						</div>
 					</section>
@@ -53,7 +53,7 @@
 									<h2>About</h2>
 									<p>A Frog and a Cat Productions creates unique tabletop RPGs and board games.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="#" class="button">Full Page</a></li>
 									</ul>
 								</div>
 							</div>
@@ -62,10 +62,10 @@
 							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>cheer</h2>
+									<p>cheer is the guy who starts ambitious projects and doesn't finish most of them.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="#" class="button">Full Page</a></li>
 									</ul>
 								</div>
 							</div>
@@ -74,10 +74,10 @@
 							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
+									<h2>ms1v</h2>
+									<p>ms1v is the guy who makes promises and never fulfills them. He's the Todd Howard of the team.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Learn more</a></li>
+										<li><a href="#" class="button">Full Page</a></li>
 									</ul>
 								</div>
 							</div>
@@ -171,11 +171,10 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="#" class="fa-twitter"><span class="label">Twitter</span></a></li>
-												<li><a href="#" class="fa-reddit"><span class="label">reddit</span></a></li>
-												<li><a href="#" class="fa-github"><span class="label">GitHub</span></a></li>
-												<li><a href="#" class="fa-instagram"><span class="label">Instagram</span></a></li>
-												<li><a href="#" class="fa-youtube-play"><span class="label">YouTube</span></a></li>
+												<li><a href="https://twitter.com/cheerfultoe" class="fa-twitter"><span class="label">Twitter</span></a></li>
+												<li><a href="https://reddit.com/u/cheerful_toe/" class="fa-reddit"><span class="label">reddit</span></a></li>
+												<li><a href="https://github.com/cheeeeer" class="fa-github"><span class="label">GitHub</span></a></li>
+												<li><a href="https://www.youtube.com/cheerfultoe" class="fa-youtube-play"><span class="label">YouTube</span></a></li>
 											</ul>
 										</li>
 									</ul>
@@ -190,7 +189,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; A Frog and a Cat Productions. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; A Frog and a Cat Productions. All rights reserved.</li><li>Web Design by <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
