--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<h1>A Frog and a Cat Productions</h1>
 							<p>Game design extraordinaires.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">About us</a></li>
+								<li><a href="#two" class="button scrolly">Our Projects</a></li>
 							</ul>
 						</div>
 					</section>
@@ -47,41 +47,18 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="about1.html" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>About</h2>
 									<p>A Frog and a Cat Productions creates unique tabletop RPGs and board games.</p>
 									<ul class="actions">
-										<li><a href="#" class="button">Full Page</a></li>
+										<li><a href="about1.html" class="button">Read More</a></li>
 									</ul>
 								</div>
 							</div>
 						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>cheer</h2>
-									<p>cheer is the guy who starts ambitious projects and doesn't finish most of them.</p>
-									<ul class="actions">
-										<li><a href="#" class="button">Full Page</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
-							<div class="content">
-								<div class="inner">
-									<h2>ms1v</h2>
-									<p>ms1v is the guy who makes promises and never fulfills them. He's the Todd Howard of the team.</p>
-									<ul class="actions">
-										<li><a href="#" class="button">Full Page</a></li>
-									</ul>
-								</div>
-							</div>
-						</section>
+						
 					</section>
 
 				<!-- Two -->
@@ -94,16 +71,19 @@
 									<span class="icon major fa-circle"></span>
 									<h3>EGG RPG</h3>
 									<p>EGG is a post-apocalyptic sci-fi Role-Playing Game that focuses on light, easy to pick up rules and a very open approach to mechanics, allowing players to quickly become immersed in the lore and begin playing.</p>
+									<li><a href="eggpage.html" class="button">Full Page</a></li>
 								</section>
 								<section>
 									<span class="icon major fa-car"></span>
 									<h3>Road Locator</h3>
 									<p>Road Locator is a cooperative board game about a bunch of aliens who go on a country-wide road trip to try and get back home.</p>
+									<li><a href="roadpage.html" class="button">Full Page</a></li>
 								</section>
 								<section>
 									<span class="icon major fa-copyright"></span>
 									<h3>SARPG</h3>
-									<p>SARPG is a Role-Playing Game based on the Nickelodeon series, Avatar: The Last Airbender.</p>
+									<p>SARPG is a Role-Playing Game based on the Nickelodeon series, Avatar: The Last Airbender. I'm pretty sure it's legal to share here since it's free. We don't own the right to Avatar, by the way.</p>
+									<li><a href="sarpage.html" class="button">Full Page</a></li>
 								</section>
 								<section>
 									<span class="icon major fa-globe"></span>
@@ -118,12 +98,9 @@
 								<section>
 									<span class="icon major fa-lock"></span>
 									<h3>TBD</h3>
-									<p>who knows if we'll even make something to put here</p>
+									<p>who knows if we'll even make something to put here </p>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="#" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
@@ -131,7 +108,7 @@
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Handy Links</h2>
-							<p>.</p>
+							<p>This form doesn't currently lead anywhere. Don't bother filling it out.</p>
 							<div class="split style1">
 								<section>
 									<form method="post" action="#">
@@ -155,18 +132,8 @@
 								<section>
 									<ul class="contact">
 										<li>
-											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
-											USA</span>
-										</li>
-										<li>
 											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
-										</li>
-										<li>
-											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
+											<a href="cheerfultoe@gmail.com">cheerfultoe@gmail.com</a>
 										</li>
 										<li>
 											<h3>Social</h3>
