--- a/about1.html
+++ b/about1.html
@@ -35,10 +35,10 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">About A Frog and a Cat Productions</h1>
+							<h1 class="major">About Us</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>A Frog and a Cat Productions was created in early 2017 when we decided we wanted an identity to share their content under. This led to the formation of A Frog and a Cat Productions, and ever since then all of our unfinished projects have had the label slapped on them. Anything of somewhat passable quality will probably be released on here.</p>
-							<p>The origin of the name "A Frog and a Cat Productions" is completely forgotten. Sorry.</p>
+							<p><i>A Frog and a Cat Productions</i> was created in early 2017 when we decided we wanted an identity to share their content under. This led to the formation of A Frog and a Cat Productions, and ever since then all of our unfinished projects have had the label slapped on them. Anything of somewhat passable quality will probably be released on here.</p>
+							<p>The origin of the name <i>A Frog and a Cat Productions</i> is completely forgotten. Sorry.</p>
 						</div>
 					</section>
 
