--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
 							<h1>A Frog and a Cat Productions</h1>
-							<p>Game design extraordinaires.</p>
+							<p><i>Game design extraordinaires.</i></p>
 							<ul class="actions">
 								<li><a href="#two" class="button scrolly">Our Projects</a></li>
 							</ul>
@@ -51,7 +51,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>About</h2>
-									<p>A Frog and a Cat Productions creates unique tabletop RPGs and board games.</p>
+									<p><i>A Frog and a Cat Productions</i> creates unique tabletop RPGs and board games.</p>
 									<ul class="actions">
 										<li><a href="about1.html" class="button">Read More</a></li>
 									</ul>
@@ -65,25 +65,25 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>Projects</h2>
-							<p>Here you'll find all of our creations avaiable to download for free.</p>
+							<p>Here you'll find all of our games available to download for free.</p>
 							<div class="features">
 								<section>
 									<span class="icon major fa-circle"></span>
 									<h3>EGG RPG</h3>
-									<p>EGG is a post-apocalyptic sci-fi Role-Playing Game that focuses on light, easy to pick up rules and a very open approach to mechanics, allowing players to quickly become immersed in the lore and begin playing.</p>
-									<li><a href="eggpage.html" class="button">Full Page</a></li>
+									<p><i>EGG RPG</i> is a post-apocalyptic sci-fi Role-Playing Game that focuses on light, easy to pick up rules and a very open approach to mechanics, allowing players to quickly become immersed in the lore and begin playing.</p>
+									<a href="eggpage.html" class="button">Full Page</a>
 								</section>
 								<section>
 									<span class="icon major fa-car"></span>
 									<h3>Road Locator</h3>
-									<p>Road Locator is a cooperative board game about a bunch of aliens who go on a country-wide road trip to try and get back home.</p>
-									<li><a href="roadpage.html" class="button">Full Page</a></li>
+									<p><i>Road Locator</i> is a cooperative board game about a bunch of aliens who go on a country-wide road trip to try and get back home.</p>
+									<a href="roadpage.html" class="button">Full Page</a>
 								</section>
 								<section>
 									<span class="icon major fa-copyright"></span>
 									<h3>SARPG</h3>
-									<p>SARPG is a Role-Playing Game based on the Nickelodeon series, Avatar: The Last Airbender. I'm pretty sure it's legal to share here since it's free. We don't own the right to Avatar, by the way.</p>
-									<li><a href="sarpage.html" class="button">Full Page</a></li>
+									<p><i>SARPG</i> is a Role-Playing Game based on the Nickelodeon series, Avatar: The Last Airbender. I'm pretty sure it's legal to share here since it's free. We don't own the right to Avatar, by the way.</p>
+									<a href="sarpage.html" class="button">Full Page</a>
 								</section>
 								<section>
 									<span class="icon major fa-globe"></span>
