--- a/eggpage.html
+++ b/eggpage.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>A Frog and a Cat Productions</title>
+		<title>EGG RPG</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,12 +18,13 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">EGG RPG</a>
+				<a href="index.html" class="title">A Frog and a Cat Productions</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="eggpage.html" class="active">EGG RPG</a></li>
+						<li><a href="roadpage.html">Road Locator</a></li>
+						<li><a href="sarpage.html">SARPG</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -34,10 +35,17 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1 class="major">EGG RPG</h1>
+							<p><i>EGG RPG</i>is a post-apocalyptic sci-fi Role-Playing Game that focuses on light, easy to pick up rules and a very open approach to mechanics, allowing players to quickly become immersed in the lore and begin playing.</p>
+							<span class="image fit"><img src="images/eggshelf.jpg" alt="" /></span>
+							<h2>Features</h2>
+							<li>Easy to pick up ruleset with quick character creation</li>
+							<li>A Unique, post-apocalyptic sci-fi setting</li>
+							<li>Deadly, gory combat full of dismemberment and explosions</li>
+							<li>Super cool bionic limbs and eyes</li>
+							<h2>Download</h2>
+							<a href="downloads\EGG RPG Core Rulebook.pdf" class="button special icon fa-download">EGG RPG Core Rulebook v1.0</a>
+							<p>If you enjoy EGG RPG and want to support A Frog and a Cat Productions, please consider <a href="index.html">donating!</p>
 						</div>
 					</section>
 
@@ -47,7 +55,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; A Frog and a Cat Productions. All rights reserved.</li><li>Web Design by <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
