--- a/sarpage.html
+++ b/sarpage.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - A Frog and a Cat Productions</title>
+		<title>SARPG</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -18,12 +18,13 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">A Frog and a Cat Productions</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="generic.html" class="active">Generic</a></li>
-						<li><a href="elements.html">Elements</a></li>
+						<li><a href="eggpage.html">EGG RPG</a></li>
+						<li><a href="roadpage.html">Road Locator</a></li>
+						<li><a href="sarpagehtml" class="active">SARPG</a></li>			
 					</ul>
 				</nav>
 			</header>
@@ -34,10 +35,16 @@
 				<!-- Main -->
 					<section id="main" class="wrapper">
 						<div class="inner">
-							<h1 class="major">A Generic Page</h1>
-							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique.</p>
-							<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+							<h1 class="major">SARPG</h1>
+							<p><i>SARPG</i> is a Role-Playing Game based on the Nickelodeon series, Avatar: The Last Airbender.</p>
+							<span class="image fit"><img src="images/sarpgheader.jpg" alt="" /></span>
+							<h2>Features</h2>
+							<li>Easy to pick up ruleset with quick character creation</li>
+							<li>A unique combat system that allowes for intricate bending maneuvers</li>
+							<li>A solid 80% chance of a cease and desist order</li>
+							<h2>Download</h2>
+							<a href="downloads\SARPG Core Rulebook.pdf" class="button special icon fa-download">SARPG Core Rulebook v1.0</a>
+							<p><i>If you enjoy SARPG and want to support A Frog and a Cat Productions, please consider <a href="index.html">donating!</i></p>
 						</div>
 					</section>
 
@@ -47,7 +54,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; A Frog and a Cat Productions. All rights reserved.</li><li>Web Design by <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
