--- a/sarpage.html
+++ b/sarpage.html
@@ -24,7 +24,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="eggpage.html">EGG RPG</a></li>
 						<li><a href="roadpage.html">Road Locator</a></li>
-						<li><a href="sarpagehtml" class="active">SARPG</a></li>			
+						<li><a href="sarpage.html" class="active">SARPG</a></li>			
 					</ul>
 				</nav>
 			</header>
