--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 								<section>
 									<span class="icon major fa-copyright"></span>
 									<h3>SARPG</h3>
-									<p><i>SARPG</i> is a Role-Playing Game based on the Nickelodeon series, Avatar: The Last Airbender. I'm pretty sure it's legal to share here since it's free. We don't own the right to Avatar, by the way.</p>
+									<p><i>SARPG</i> is a Role-Playing Game based on the Nickelodeon series, Avatar: The Last Airbender. I'm pretty sure it's legal to share here since it's free. We don't own the rights to Avatar, by the way.</p>
 									<a href="sarpage.html" class="button">Full Page</a>
 								</section>
 								<section>
