--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
 									<ul class="contact">
 										<li>
 											<h3>Email</h3>
-											<a href="cheerfultoe@gmail.com">cheerfultoe@gmail.com</a>
+											<a href="cheerfultoe@gmail.com">afrogandacatproductions@gmail.com</a>
 										</li>
 										<li>
 											<h3>Social</h3>
@@ -150,4 +150,3 @@
 
 	</body>
 </html>
-\ No newline at end of file
