--- a/about1.html
+++ b/about1.html
@@ -37,7 +37,7 @@
 						<div class="inner">
 							<h1 class="major">About Us</h1>
 							<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>
-							<p><i>A Frog and a Cat Productions</i> was created in early 2017 when we decided we wanted an identity to share their content under. This led to the formation of A Frog and a Cat Productions, and ever since then all of our unfinished projects have had the label slapped on them. Anything of somewhat passable quality will probably be released on here.</p>
+							<p><i>A Frog and a Cat Productions</i> was created in early 2017 when we decided we wanted an identity to share our content under. This led to the formation of A Frog and a Cat Productions, and ever since then all of our unfinished projects have had the label slapped on them. Anything of somewhat passable quality will probably be released on here.</p>
 							<p>The origin of the name <i>A Frog and a Cat Productions</i> is completely forgotten. Sorry.</p>
 						</div>
 					</section>
