--- a/eggpage.html
+++ b/eggpage.html
@@ -40,7 +40,7 @@
 							<span class="image fit"><img src="images/eggshelf.jpg" alt="" /></span>
 							<h2>Features</h2>
 							<li>Easy to pick up ruleset with quick character creation</li>
-							<li>A Unique, post-apocalyptic sci-fi setting</li>
+							<li>A unique, post-apocalyptic sci-fi setting</li>
 							<li>Deadly, gory combat full of dismemberment and explosions</li>
 							<li>Super cool bionic limbs and eyes</li>
 							<h2>Download</h2>
