--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
-									<h3>TBD</h3>
-									<p>who knows if we'll even make something to put here</p>
+									<h3>Vietnimes: Tactical Insurgency Action</h3>
+									<p>COMING SOON</p>
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
