--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 									<p>COMING SOON</p>
 								</section>
 								<section>
-									<span class="icon major fa-lock"></span>
+									<span class="icon major fa-angle-double-up"></span>
 									<h3>TBD</h3>
 									<p>who knows if we'll even make something to put here </p>
 								</section>
