--- a/index.html
+++ b/index.html
@@ -86,11 +86,6 @@
 									<a href="sarpage.html" class="button">Full Page</a>
 								</section>
 								<section>
-									<span class="icon major fa-globe"></span>
-									<h3>john country</h3>
-									<p>COMING SOON</p>
-								</section>
-								<section>
 									<span class="icon major fa-angle-double-up"></span>
 									<h3>Vietnimes: Tactical Insurgency Action</h3>
 									<p>COMING SOON</p>
@@ -98,7 +93,12 @@
 								<section>
 									<span class="icon major fa-lock"></span>
 									<h3>TBD</h3>
-									<p>who knows if we'll even make something to put here </p>
+									<p>There's no game here - yet!</p>
+								</section>
+								<section>
+									<span class="icon major fa-lock"></span>
+									<h3>TBD</h3>
+									<p>There's no game here - yet!</p>
 								</section>
 							</div>
 						</div>
