--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="about1.html" class="image"><img src="images/pic01.png" alt="" data-position="center center" /></a>
+							<a href="about1.html" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>About</h2>
