--- a/eggpage.html
+++ b/eggpage.html
@@ -44,7 +44,10 @@
 							<li>Deadly, gory combat full of dismemberment and explosions</li>
 							<li>Super cool bionic limbs and eyes</li>
 							<h2>Download</h2>
-							<a href="downloads\EGG RPG Core Rulebook.pdf" class="button special icon fa-download">EGG RPG Core Rulebook v1.0</a>
+							<a href="downloads\EGG\EGG RPG Core Rulebook.pdf" class="button special icon fa-download">Core Rulebook</a>
+							<a href="downloads\EGG\EGG Character Sheet.pdf" class="button special icon fa-download">Character Sheet</a>
+							<a href="downloads\EGG\EGG Combat Reference.pdf" class="button special icon fa-download">Combat Reference Sheet</a>
+							<a href="downloads\EGG\EGG Weapon Cards.zip" class="button special icon fa-download">Weapon Cards</a>
 							<p>If you enjoy EGG RPG and want to support A Frog and a Cat Productions, please consider <a href="index.html">donating!</p>
 						</div>
 					</section>
