--- a/about1.html
+++ b/about1.html
@@ -6,9 +6,9 @@
 -->
 <html>
 	<head>
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.jpg">
+		<link rel="icon" type="image/jpg" sizes="32x32" href="/favicon-32x32.jpg">
+		<link rel="icon" type="image/jpg" sizes="16x16" href="/favicon-16x16.jpg">
 		<link rel="manifest" href="/manifest.json">
 		<meta name="theme-color" content="#ffffff">
 		<title>About Us</title>
