--- a/eggpage.html
+++ b/eggpage.html
@@ -6,11 +6,8 @@
 -->
 <html>
 	<head>
-		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.jpg">
-		<link rel="icon" type="image/jpg" sizes="32x32" href="/favicon-32x32.jpg">
-		<link rel="icon" type="image/jpg" sizes="16x16" href="/favicon-16x16.jpg">
-		<link rel="manifest" href="/manifest.json">
-		<meta name="theme-color" content="#ffffff">
+ <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
+
 	
 		<title>EGG RPG</title>
 		<meta charset="utf-8" />
