--- a/eggpage.html
+++ b/eggpage.html
@@ -7,7 +7,6 @@
 <html>
 	<head>
  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
-
 	
 		<title>EGG RPG</title>
 		<meta charset="utf-8" />
@@ -39,19 +38,29 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">EGG RPG</h1>
-							<p><i>EGG RPG</i> is a post-apocalyptic sci-fi Role-Playing Game that focuses on light, easy to pick up rules and a very open approach to mechanics, allowing players to quickly become immersed in the lore and begin playing.</p>
+							<h3>Please note that this is an alpha playtest version of EGG RPG. Suggestions and criticism should be directed towards<a href="http://reddit.com/r/eggrpg"> /r/EGGRPG on Reddit</a> or <a href="http://twitter.com/frogandcat_">@frogandcat_ on Twitter.</a></h3>
 							<span class="image fit"><img src="images/eggshelf.jpg" alt="" /></span>
+							<h2>What is EGG RPG?</h2>
+							<p>In 2130, archeologists conducting a dig in Russia accidentally released a strange flesh parasite into the world. The <b>East Russian Infection</b> quickly spread, which, as scientists explained, was due to the fact that it reproduced by eating. Despite global efforts to stop it, there was nothing that could be done about the spread of the parasite, and it quickly spread across Earth. Most of the world population died except for those who managed to get onto the final ships leaving the planet.</p>		
+							<p>The people of Earth are succeeded by those who live on one of the three remaining <b>Aurora-Class</b> ships: <b><i>Constellation, Horizon, and 天光 (Celestial Light)</i></b>. Research Facilities on <b>Earth’s Moon</b> and <b>Saturn’s moon, Titan</b>, act as military installations. The ships and colonies are ruled over by massive corporations, with populations in the billions.</p>
+							<p>As for planetary colonization, Mars was colonized by the corporation <b>Protocom进化生物</b> in 2040, but they are very defensive of their colony due to fear of another ancient parasite being awakened. <b>天光</b> effectively serves as a defense satellite, orbiting Mars.
+							<p>While the corporations are very hesitant to leave Sol out of fear of meeting a foe far more powerful than themselves, <b>a rebel organization known as the New Haven Republic wish to gain control of an Aurora-Class ship in order to colonize new planets in a different star system.</b>
+							<p>This is the horrific, awful, terrible world of <b>EGG RPG.</b> People live under the control of corporations that only have the slightest concern about their well-being. While technology has improved the standard of living significantly, most of it is in its very early stages. Prosthetic limbs that outperform their flesh counterparts exist, but aren’t very aesthetically pleasing. Exposed wires and bulky battery packs keep many people cynical about the state of technological progress, with many feeling that the human race will never be as great as it could have if Earth were not lost.
+							<p>At its core, <b>EGG RPG</b> is a Role-Playing Game that focuses on light, easy to pick up rules and a very open approach to mechanics, allowing players to quickly become immersed in the lore and begin playing.
+</p>
 							<h2>Features</h2>
 							<li>Easy to pick up ruleset with quick character creation</li>
-							<li>A unique, post-apocalyptic sci-fi setting</li>
+							<li>Multiple settings with their own unique traits</li>
 							<li>Deadly, gory combat full of dismemberment and explosions</li>
-							<li>Super cool bionic limbs and eyes</li>
+							<li>A dark, post-apocalyptic take on humanity's space-age revolution</li>
 							<h2>Download</h2>
 							<a href="downloads\EGG\EGG RPG Core Rulebook.pdf" class="button special icon fa-download">Core Rulebook</a>
 							<a href="downloads\EGG\EGG Character Sheet.pdf" class="button special icon fa-download">Character Sheet</a>
 							<a href="downloads\EGG\EGG Combat Reference.pdf" class="button special icon fa-download">Combat Reference Sheet</a>
 							<a href="downloads\EGG\EGG Weapon Cards.zip" class="button special icon fa-download">Weapon Cards</a>
-							<p>If you enjoy EGG RPG and want to support A Frog and a Cat Productions, please consider <a href="index.html">donating!</p>
+							
+							<h3><a href="https://twitter.com/frogandcat_">Follow us on Twitter for updates! <i class="fa fa-twitter" aria-hidden="true"></i></h3>
+
 						</div>
 					</section>
 
