--- a/index.html
+++ b/index.html
@@ -118,13 +118,14 @@
 								<section>
 									<ul class="contact">
 										<li>
+											<h3><a href="https://twitter.com/frogandcat_">Follow us on Twitter for updates! <i class="fa fa-twitter" aria-hidden="true"></i>
+											</h3>
 											<h3>Email</h3>
 											<a href="cheerfultoe@gmail.com">afrogandacatproductions@gmail.com</a>
 										</li>
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="https://twitter.com/cheerfultoe" class="fa-twitter"><span class="label">Twitter</span></a></li>
 												<li><a href="https://reddit.com/u/cheerful_toe/" class="fa-reddit"><span class="label">reddit</span></a></li>
 												<li><a href="https://github.com/cheeeeer" class="fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.youtube.com/cheerfultoe" class="fa-youtube-play"><span class="label">YouTube</span></a></li>
