--- a/eggpage.html
+++ b/eggpage.html
@@ -53,6 +53,11 @@
 							<li>Multiple settings with their own unique traits</li>
 							<li>Deadly, gory combat full of dismemberment and explosions</li>
 							<li>A dark, post-apocalyptic take on humanity's space-age revolution</li>
+							<h2>What to expect from the finished version</h2>
+							<li>Professional PDF layout</li>
+							<li>Art!</li>
+							<li>Revised gameplay mechanics based on <i>your</i> feedback!</li>
+
 							<h2>Download</h2>
 							<a href="downloads\EGG\EGG RPG Core Rulebook.pdf" class="button special icon fa-download">Core Rulebook</a>
 							<a href="downloads\EGG\EGG Character Sheet.pdf" class="button special icon fa-download">Character Sheet</a>
