--- a/eggrpg.html
+++ b/eggrpg.html
@@ -24,9 +24,9 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="eggpage.html" class="active">EGG RPG</a></li>
-						<li><a href="roadpage.html">Road Locator</a></li>
-						<li><a href="sarpage.html">SARPG</a></li>
+						<li><a href="eggrpg.html" class="active">EGG RPG</a></li>
+						<li><aaaa href="roadpage.html">Coming Soon!</a></li>
+						<li><aaa href="sarpage.html">Coming Soon!</a></li>
 					</ul>
 				</nav>
 			</header>
