--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<li><a href="#intro">Home</a></li>
 							<li><a href="#one">About</a></li>
 							<li><a href="#two">Projects</a></li>
-							<li><a href="#three">Handy Links</a></li>
+							<li><a href="#three">Contact</a></li>
 						</ul>
 					</nav>
 				</div>
@@ -73,24 +73,22 @@
 									<span class="icon major fa-circle"></span>
 									<h3>EGG RPG</h3>
 									<p><i>EGG RPG</i> is a post-apocalyptic sci-fi Role-Playing Game that focuses on light, easy to pick up rules and a very open approach to mechanics, allowing players to quickly become immersed in the lore and begin playing.</p>
-									<a href="eggpage.html" class="button">Full Page</a>
+									<a href="eggrpg.html" class="button">Full Page</a>
 								</section>
 								<section>
 									<span class="icon major fa-car"></span>
 									<h3>Road Locator</h3>
-									<p><i>Road Locator</i> is a cooperative board game about a bunch of aliens who go on a country-wide road trip to try and get back home.</p>
-									<a href="roadpage.html" class="button">Full Page</a>
+									<p>Stay tuned, <i>Road Locator</i> is still under development!</p>
 								</section>
 								<section>
 									<span class="icon major fa-copyright"></span>
 									<h3>SARPG</h3>
-									<p><i>SARPG</i> is a Role-Playing Game based on the Nickelodeon series, Avatar: The Last Airbender. I'm pretty sure it's legal to share here since it's free. We don't own the rights to Avatar, by the way.</p>
-									<a href="sarpage.html" class="button">Full Page</a>
+									<p>Stay tuned, <i>SARPG</i> is still under development!</p>
 								</section>
 								<section>
 									<span class="icon major fa-angle-double-up"></span>
-									<h3>Vietnimes: Tactical Insurgency Action</h3>
-									<p>COMING SOON</p>
+									<h3>Untitled Vietnam Game</h3>
+									<p>Stay tuned, <i>whatever this game will be called</i> is still under development!</p>
 								</section>
 								<section>
 									<span class="icon major fa-lock"></span>
@@ -109,7 +107,7 @@
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
-							<h2>Handy Links</h2>
+							<h2>Contact</h2>
 								<section>
 									<ul class="contact">
 										<li>
