--- a/sarpage.html
+++ b/sarpage.html
@@ -25,7 +25,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="eggpage.html">EGG RPG</a></li>
+						<li><a href="eggrpg.html">EGG RPG</a></li>
 						<li><a href="roadpage.html">Road Locator</a></li>
 						<li><a href="sarpage.html" class="active">SARPG</a></li>			
 					</ul>
