--- a/about1.html
+++ b/about1.html
@@ -26,7 +26,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about1.html" class="active">About Us</a></li>
 						<li><a href="index.html#two">Projects</a></li>
-						<li><a href="index.html#three">Handy Links</a></li>
+						<li><a href="index.html#three">Contact</a></li>
 					</ul>
 				</nav>
 			</header>
