--- a/roadpage.html
+++ b/roadpage.html
@@ -25,7 +25,7 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="eggpage.html">EGG RPG</a></li>
+						<li><a href="eggrpg.html">EGG RPG</a></li>
 						<li><a href="roadpage.html" class="active">Road Locator</a></li>
 						<li><a href="sarpage.html">SARPG</a></li>
 
