EGG RPG playtest update

--- a/eggrpg.html
+++ b/eggrpg.html
@@ -59,7 +59,7 @@
 							<li>Revised gameplay mechanics based on <i>your</i> feedback!</li>
 
 							<h2>Download</h2>
-							<a href="downloads\EGG\EGG RPG Core Rulebook.pdf" class="button special icon fa-download">Core Rulebook</a>
+							<a href="https://docs.google.com/document/d/147eK_9UYdNKMYnBAKKN0a6ndLL_u6V-EO8SgP1z8t-E/edit?usp=sharing" class="button special icon fa-download">Core Rulebook</a>
 							<a href="downloads\EGG\EGG Character Sheet.pdf" class="button special icon fa-download">Character Sheet</a>
 							<a href="downloads\EGG\EGG Combat Reference.pdf" class="button special icon fa-download">Combat Reference Sheet</a>
 							<a href="downloads\EGG\EGG Weapon Cards.zip" class="button special icon fa-download">Weapon Cards</a>
