--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 										<li>
 											<h3>Social</h3>
 											<ul class="icons">
-												<li><a href="https://reddit.com/u/cheerful_toe/" class="fa-reddit"><span class="label">reddit</span></a></li>
+												<li><a href="https://reddit.com/r/eggrpg/" class="fa-reddit"><span class="label">reddit</span></a></li>
 												<li><a href="https://github.com/cheeeeer" class="fa-github"><span class="label">GitHub</span></a></li>
 												<li><a href="https://www.youtube.com/cheerfultoe" class="fa-youtube-play"><span class="label">YouTube</span></a></li>
 											</ul>
