--- a/eggrpg.html
+++ b/eggrpg.html
@@ -67,7 +67,7 @@
 							<h3><a href="https://twitter.com/frogandcat_">Follow us on Twitter for updates! <i class="fa fa-twitter" aria-hidden="true"></i></h3>
 
 							<h2>Tabletop Simulator</h2>
-							<p>In addition to the downloadable PDF form, EGG RPG is available for <a href="http://store.steampowered.com/app/286160/Tabletop_Simulator/">Tabletop Simulator</a> on the official <a href="linkegghere">Tabletop Simulator Steam Workshop page</a>!</p>
+							<p>In addition to the downloadable PDF form, EGG RPG is available for <a href="http://store.steampowered.com/app/286160/Tabletop_Simulator/">Tabletop Simulator</a> on the official <a href="http://steamcommunity.com/sharedfiles/filedetails/?id=1279430279">Tabletop Simulator Steam Workshop page</a>!</p>
 
 						</div>
 					</section>
